testsuite/tests/typecheck/should_fail/T5978.stderr

T5978.hs:22:11: error:
    Couldn't match type ‘Char’ with ‘Bool’
    arising from a functional dependency between:
      constraint ‘C Float Bool’ arising from a use of ‘polyBar’
      instance ‘C Float Char’ at T5978.hs:7:10-21
    In the expression: polyBar id monoFoo
    In an equation for ‘monoBar’: monoBar = polyBar id monoFoo
